--- a/app/assets/stylesheets/sandboxes.css.scss
+++ b/app/assets/stylesheets/sandboxes.css.scss
@@ -1,3 +1,6 @@
 // Place all the styles related to the Sandboxes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+//= require joint.all
+//= require bpmn
+//= require style
