--- a/app/views/sandboxes/_form.html.erb
+++ b/app/views/sandboxes/_form.html.erb
@@ -4,7 +4,7 @@
   <div class="form-inputs">
     <%= f.input :name %>
     <%= f.input :description %>
-    <%= f.input :data %>
+    <%= f.input :graph_data %>
   </div>
 
   <div class="form-actions">
