--- a/app/views/sandboxes/index.html.erb
+++ b/app/views/sandboxes/index.html.erb
@@ -5,7 +5,7 @@
     <tr>
       <th>Name</th>
       <th>Description</th>
-      <th>Data</th>
+      <th>Graph Data</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,7 +15,7 @@
       <tr>
         <td><%= sandbox.name %></td>
         <td><%= sandbox.description %></td>
-        <td><%= sandbox.data %></td>
+        <td><%= sandbox.graph_data %></td>
         <td><%= link_to 'Show', sandbox %></td>
         <td><%= link_to 'Edit', edit_sandbox_path(sandbox) %></td>
         <td><%= link_to 'Destroy', sandbox, method: :delete, data: { confirm: 'Are you sure?' } %></td>
