--- a/app/assets/stylesheets/bpmn.css
+++ b/app/assets/stylesheets/bpmn.css
@@ -107,13 +107,13 @@
 }
 
 #toolbar-container button:hover {
-    -moz-box-shadow:    inset 0 0 25px rgba(255,255,255,0.2)
+    -moz-box-shadow:    inset 0 0 25px rgba(255,255,255,0.2);
     -webkit-box-shadow: inset 0 0 25px rgba(255,255,255,0.2);
     box-shadow:         inset 0 0 25px rgba(255,255,255,0.2);
 }
 
 #toolbar-container button:active {
-    -moz-box-shadow:    inset 0 0 25px rgba(0,0,0,0.5)
+    -moz-box-shadow:    inset 0 0 25px rgba(0,0,0,0.5);
     -webkit-box-shadow: inset 0 0 25px rgba(0,0,0,0.5);
     box-shadow:         inset 0 0 25px rgba(0,0,0,0.5);
 }
