--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {
-  padding: 20px;
+  padding: 15px 10px;
   font-family: 'Open Sans', sans-serif;
-  font-size: 14px;
+  font-size: 13px;
 }
 
 a {
@@ -27,6 +27,7 @@ a {
 
 .element .fobj div {
   text-align: left;
+  font-size: 13px;
 }
 
 /*Inspector*/
