--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -38,9 +38,12 @@ a {
 }
 
 .inspector-trigger {
-    position: absolute;
-    right: 0;
-    width: 270px;
+  position: absolute;
+  right: 0;
+  width: 320px;
+  background: #F2F2F2;
+  height: 70px;
+  padding: 10px;
 }
 
 .inspector input, .inspector textarea {
