--- a/app/views/sandboxes/show.html.erb
+++ b/app/views/sandboxes/show.html.erb
@@ -41,12 +41,12 @@
           <input id="fileName" type="text" value="Process Mapping"/>
         </div>
         <div>
-          <div class="btn-toggleStencil stencil-trigger" style="">Hide Me!</div>
+          <div class="btn-toggleStencil stencil-trigger" style=""></div>
           <div id="stencil-container"></div>
         </div>
         <div>
         <div class="container-of-inspector-and-trigger">
-          <div class="btn-toggleInspector inspector-trigger"><></div>
+          <div class="btn-toggleInspector inspector-trigger"></div>
           <div id="inspector-container">
 
             <div class="about">
