hidde and display

--- a/app/views/sandboxes/show.html.erb
+++ b/app/views/sandboxes/show.html.erb
@@ -46,7 +46,7 @@
         </div>
         <div>
         <div class="container-of-inspector-and-trigger">
-          <div class="btn-toggleInspector inspector-trigger"><></div>
+          <div id="btn-inspector-container">lol</div>
           <div id="inspector-container">
 
             <div class="about">
