--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -41,11 +41,30 @@ a {
 
 /*Step halo*/
 
+text.label {
+  display: none;
+}
+
 .halo {
   padding: 0px;
   margin: -2px;
   border: 1px solid #0091EA;
   box-shadow: 0px 0px 6px #0091EA;
+}
+
+.halo .box {
+  display: none;
+}
+
+[data-type="bpmn.Person"] {
+  border: none;
+}
+
+.halo.small {
+  border-radius: 30px;
+  padding: 0px;
+  margin: 0px;
+  border: none;
 }
 
 .halo > div {
@@ -54,14 +73,30 @@ a {
   background-size: 30px 30px;
 }
 
+.halo.small > div {
+  width: 20px;
+  height: 20px;
+  background-size: 20px 20px;
+}
+
 .halo .handle.se {
   bottom: -15px;
   right: -15px;
 }
 
+.halo.small .handle.se {
+  bottom: -27px;
+  right: -19px;
+}
+
 .halo .handle.s {
   bottom: -15px;
   left: 80%;
+}
+
+.halo.small .handle.s {
+  bottom: -27px;
+  margin-left: -17px;
 }
 
 .halo .handle.nw {
