--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -289,3 +289,34 @@ color: #BD10E0;
   top: 64%;
   left: 5px;
 }
+
+/*Tooltip*/
+
+.tooltip {
+  max-width: 800px;
+  min-width: 50px;
+  border: none;
+  box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.22);
+  font-size: 13px;
+  padding: 15px 15px 25px;
+  /*position: relative;*/
+}
+
+.tooltip.bottom {
+  position: relative;
+}
+
+.tooltip.bottom:after {
+  top: 100%;
+  left: 50%;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none;
+  border-color: rgba(255, 255, 255, 0);
+  border-top-color: #ffffff;
+  border-width: 15px;
+  margin-left: -15px;
+}
