Cambio color tooltip

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -294,10 +294,12 @@ color: #BD10E0;
 
 .tooltip {
   max-width: 800px;
+  background: #FFFBF6;
   border: none;
-  box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.22);
+  box-shadow: 1px 2px 6px rgba(0, 0, 0, 0.22);
   font-size: 13px;
   padding: 15px 15px 25px;
+  border-radius: 0;
 }
 
 .tooltip.bottom:after {
@@ -310,7 +312,7 @@ color: #BD10E0;
   position: absolute;
   pointer-events: none;
   border-color: rgba(255, 255, 255, 0);
-  border-top-color: #ffffff;
+  border-top-color: #FFFBF6;
   border-width: 15px;
   margin-left: -15px;
 }
@@ -325,7 +327,7 @@ color: #BD10E0;
   position: absolute;
   pointer-events: none;
   border-color: rgba(255, 255, 255, 0);
-  border-bottom-color: #ffffff;
+  border-bottom-color: #FFFBF6;
   border-width: 15px;
   margin-left: -15px;
 }
