--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -201,6 +201,7 @@ color: #BD10E0;
   height: 70px;
   cursor: pointer;
   top: 45px;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.12);
 }
 
 .stencil-trigger::before, .stencil-trigger::after {
@@ -232,6 +233,7 @@ color: #BD10E0;
 #inspector-container {
   background: #F2F2F2;
   width: 300px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12);
 }
 
 .inspector input, .inspector textarea {
@@ -264,6 +266,7 @@ color: #BD10E0;
   background: #F2F2F2;
   height: 70px;
   cursor: pointer;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12);
 }
 
 .inspector-trigger::before, .inspector-trigger::after {
