--- a/app/views/layouts/sandboxes.html.erb
+++ b/app/views/layouts/sandboxes.html.erb
@@ -7,6 +7,8 @@
     <%= stylesheet_link_tag 'sandboxes', media: 'all', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   </head>
   <body>
@@ -17,7 +19,8 @@
        <!-- <%= render 'layouts/messages' %> -->
        <%= yield %>
     </main>
-    
+
     <%= javascript_include_tag 'sandboxes', 'data-turbolinks-track' => true %>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   </body>
 </html>
