fix arrows for hide and display lateral bars

--- a/app/views/sandboxes/show.html.erb
+++ b/app/views/sandboxes/show.html.erb
@@ -2,7 +2,9 @@
     
         <div id="paper-container"></div>
           
-        <div id="btn-sidebar-left" class="btn-toggleStencil stencil-trigger" style=""></div>
+        <div id="btn-sidebar-left" class="btn-toggleStencil stencil-trigger" style="">
+          <i id="btn-left" class="fa fa-chevron-left fa-4x"></i>
+        </div>
         <div id="sidebar-left" role="sidebar" class="sidebar">
           <div id="toolbar-container">
             <input id="fileName" type="text" value="Process Mapping"/>
@@ -20,7 +22,9 @@
 
         <div>
           <div class="container-of-inspector-and-trigger">
-            <div id="btn-inspector-container" class="btn-toggleInspector inspector-trigger"></div>
+            <div id="btn-inspector-container" class="btn-toggleInspector inspector-trigger">
+              <i id="btn-right" class="fa fa-chevron-right fa-4x"></i>
+            </div>
             <div id="inspector-container">
               <div class="about">
                 <h1>Vizard</h1>
