--- a/app/views/layouts/sandboxes.html.erb
+++ b/app/views/layouts/sandboxes.html.erb
@@ -4,12 +4,14 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title><%= content_for?(:title) ? yield(:title) : "Vizard Rails" %></title>
     <!-- <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Vizard Rails" %>"> -->
-    <%= stylesheet_link_tag 'sandboxes', media: 'all', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
+    <%= stylesheet_link_tag 'joint.all', media: 'all', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag 'bpmn', media: 'all', 'data-turbolinks-track' => true %>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <%= stylesheet_link_tag 'style', media: 'all', 'data-turbolinks-track' => true %>
   </head>
   <body>
     <header>
