--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -39,6 +39,21 @@ a {
   font-size: 14px;
 }
 
+.Intervention:after {
+  bottom: 100%;
+  left: 50%;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none;
+  border-color: rgba(255, 246, 232, 0);
+  border-bottom-color: #FFF6E8;
+  border-width: 120px;
+  margin-left: -120px;
+}
+
 /*Step halo*/
 
 .halo {
