add first letter of the name
small improves on layouts for bootstrap use

--- a/app/views/layouts/sandboxes.html.erb
+++ b/app/views/layouts/sandboxes.html.erb
@@ -18,8 +18,10 @@
       <!-- <%= render 'layouts/navigation' %> -->
     </header>
     <main role="main">
-       <!-- <%= render 'layouts/messages' %> -->
-       <%= yield %>
+      <div class="container">
+        <!-- <%= render 'layouts/messages' %> -->
+        <%= yield %>
+      </div>
     </main>
 
     <%= javascript_include_tag 'sandboxes', 'data-turbolinks-track' => true %>
