--- a/app/views/sandboxes/index.html.erb
+++ b/app/views/sandboxes/index.html.erb
@@ -1,11 +1,10 @@
-<h1>Listing sandboxes</h1>
+<h2 class="page-header">Listing sandboxes</h2>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Name</th>
       <th>Description</th>
-      <th>Graph Data</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -13,12 +12,27 @@
   <tbody>
     <% @sandboxes.each do |sandbox| %>
       <tr>
-        <td><%= sandbox.name %></td>
+        <td>
+          <%= link_to sandbox do %>
+            <%= sandbox.name %>
+          <% end %>
+        </td>
         <td><%= sandbox.description %></td>
-        <td><%= sandbox.graph_data %></td>
-        <td><%= link_to 'Show', sandbox %></td>
-        <td><%= link_to 'Edit', edit_sandbox_path(sandbox) %></td>
-        <td><%= link_to 'Destroy', sandbox, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to sandbox do %>
+            <i class="fa fa-eye" title="Show"></i>
+          <% end %>
+        </td>
+        <td>
+          <%= link_to edit_sandbox_path(sandbox) do %>
+            <i class="fa fa-edit" title="Edit"></i>
+          <% end %>
+        </td>
+        <td>
+          <%= link_to sandbox, method: :delete, data: { confirm: 'Are you sure?' } do %>
+            <i class="fa fa-trash" title="Delete"></i>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +40,6 @@
 
 <br>
 
-<%= link_to 'New Sandbox', new_sandbox_path %>
+<%= link_to new_sandbox_path, class: 'btn btn-default' do %>
+  <i class="fa fa-plus-square-o"></i> New Sandbox
+<% end %>
