--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -426,3 +426,10 @@ color: #BD10E0;
   font-weight: 400;
   text-transform: uppercase;
 }
+
+/*Person*/
+
+.Person .label {
+  font-size: 100%;
+  font-weight: 600;
+}
