--- a/app/views/sandboxes/_form.html.erb
+++ b/app/views/sandboxes/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :name, placeholder: 'Enter your name', input_html: { class: 'form-control' } %>
+    <%= f.input :name, placeholder: 'Enter a sandbox name', input_html: { class: 'form-control' } %>
     <%= f.input :description, placeholder: 'Enter a description', input_html: { class: 'form-control' } %>
     <%= f.input :graph_data, placeholder: 'Enter your JSON data', input_html: { class: 'form-control' } %>
   </div>
