--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -196,6 +196,16 @@ a {
   background-image: url(https://googledrive.com/host/0B6QQVPLH_F8Xck14OEtVN0dTYXM/copy-h.svg);
 }
 
+/*Selection box*/
+
+.selection-box {
+  border: 1px dashed #BD10E0;
+  margin-top: 0px;
+  margin-left: 0px;
+  border-radius: 0px;
+  background-color: rgba(189, 16, 224, 0.08);
+}
+
 /*Sidebar*/
 
 .sidebar {
