--- a/app/views/sandboxes/show.html.erb
+++ b/app/views/sandboxes/show.html.erb
@@ -16,6 +16,7 @@
             <button class="btn-clear" onclick="graph.clear()" data-tooltip="Clear"><i class="fa fa-trash fa-lg"></i></button>
             <button class="btn-undo" onclick="commandManager.undo()" data-tooltip="Undo"><i class="fa fa-undo fa-lg"></i></button>
             <button class="btn-redo" onclick="commandManager.redo()" data-tooltip="Redo"><i class="fa fa-repeat fa-lg"></i></button>
+            <button class="btn-center" onclick="toolbar.centerGraph()" data-tooltip="Center"><i class="fa fa-arrows-alt fa-lg"></i></button>
           </div>
           <div id="stencil-container"></div>
         </div>
