--- a/app/views/sandboxes/show.html.erb
+++ b/app/views/sandboxes/show.html.erb
@@ -7,8 +7,10 @@
         </div>
         <div id="sidebar-left" role="sidebar" class="sidebar">
           <div id="toolbar-container">
-            <div id="fileName"><%= truncate(@sandbox.name, length: 40, omission: "...") %></div>
-            <div id="fileEdit"><%= link_to('<i class="fa fa-pencil"></i>'.html_safe, [:edit, @sandbox]) %></div>
+            <div class="clearfix">
+              <span id="fileName"><%= truncate(@sandbox.name, length: 40, omission: "...") %></span>
+              <span id="fileEdit"><%= link_to('<i class="fa fa-pencil"></i>'.html_safe, [:edit, @sandbox]) %></span>
+            </div>
             <button class="btn-drive-save" onclick="toolbar.saveGraph()" data-tooltip="Save"><i class="fa fa-floppy-o fa-lg"></i></button>
             <button class="btn-print" onclick="paper.print()" data-tooltip="Print"><i class="fa fa-print fa-lg"></i></button>
             <button class="btn-json" onclick="toolbar.toJSON()" data-tooltip="Open As JSON"><i class="fa fa-file-code-o fa-lg"></i></button>
