Hotfix, re-enabled highlighted links when they have a description

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -377,6 +377,12 @@ color: #BD10E0;
   text-transform: none;
 }
 
+/*Arrow*/
+
+.active-arrow {
+  fill: #4A90E2;
+}
+
 /*Tooltip*/
 
 .joint-tooltip {
