Added save confirmation, #104

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -383,6 +383,13 @@ color: #BD10E0;
   fill: #4A90E2;
 }
 
+/*Alert*/
+
+#alert {
+  display: none;
+  float: right;
+}
+
 /*Tooltip*/
 
 .joint-tooltip {
