--- a/app/views/sandboxes/show.html.erb
+++ b/app/views/sandboxes/show.html.erb
@@ -6,12 +6,12 @@
           <i id="btn-left" class="fa fa-chevron-left fa-2x"></i>
         </div>
         <div id="sidebar-left" role="sidebar" class="sidebar">
-          <div id="toolbar-container">
-            <div class="clearfix">
+          <div class="clearfix toolbarName">
               <span id="fileName"><%= truncate(@sandbox.name, length: 40, omission: "...") %></span>
               <span id="fileEdit"><%= link_to('<i class="fa fa-pencil"></i>'.html_safe, [:edit, @sandbox]) %></span>
-              <span id="alert"></span>
-            </div>
+              <span class="alert"></span>
+          </div>
+          <div id="toolbar-container">
             <button class="btn-drive-save" onclick="toolbar.saveGraph()" data-tooltip="Save"><i class="fa fa-floppy-o fa-lg"></i></button>
             <button class="btn-print" onclick="paper.print()" data-tooltip="Print"><i class="fa fa-print fa-lg"></i></button>
             <button class="btn-json" onclick="toolbar.toJSON()" data-tooltip="Open As JSON"><i class="fa fa-file-code-o fa-lg"></i></button>
