--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -238,12 +238,12 @@ a:hover {
   font-size: 18px;
   font-weight: 300;
   text-transform: capitalize;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 #fileEdit a {
   font-size: 16px;
-  color: #555555;
+  color: #FFFFFF;
 }
 
 #fileEdit a:hover {
@@ -311,6 +311,11 @@ color: #BD10E0;
   background: #F2F2F2;
   width: 300px;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12);
+}
+
+.clearfix.toolbarName {
+  padding: 10px 15px;
+  background: #333;
 }
 
 .inspector input, .inspector textarea {
