--- a/app/views/sandboxes/index.html.erb
+++ b/app/views/sandboxes/index.html.erb
@@ -3,8 +3,10 @@
 <table class="table table-striped">
   <thead>
     <tr>
+      <th>id</th>
       <th>Name</th>
       <th>Description</th>
+      <th>Last update</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,12 +14,14 @@
   <tbody>
     <% @sandboxes.each do |sandbox| %>
       <tr>
+        <td><%= sandbox.id %></td>
         <td>
           <%= link_to sandbox do %>
             <%= sandbox.name %>
           <% end %>
         </td>
         <td><%= sandbox.description %></td>
+        <td><%= sandbox.updated_at %></td>
         <td>
           <%= link_to sandbox do %>
             <i class="fa fa-eye" title="Show"></i>
