change title margin and hover color closes #128 closes #129

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -42,6 +42,7 @@ a:hover {
   font-weight: 600;
   margin-bottom: 10px;
   font-size: 14px;
+  margin-top: 10px;
 }
 
 .step-date {
@@ -281,7 +282,7 @@ a:hover {
 -moz-box-shadow: none;
 -webkit-box-shadow: none;
 box-shadow: none;
-color: #BD10E0;
+color: #F2F2F2;
 }
 
 .stencil .elements {
@@ -554,7 +555,7 @@ background-color: #F55923;
   font-weight: 600;
   font-size: 18px;
 }
- 
+
 /*Group*/
 
 .GroupOrganization rect {
