--- a/app/views/layouts/sandboxes.html.erb
+++ b/app/views/layouts/sandboxes.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-    <title><%= content_for?(:title) ? yield(:title) : "Vizard Rails" %></title>
+    <title><%= content_for?(:title) ? yield(:title) + " - " : "" %>Vizard</title>
     <!-- <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Vizard Rails" %>"> -->
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'joint.all', media: 'all', 'data-turbolinks-track' => true %>
