new application layout

--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,1 +1,7 @@
 <%# add navigation links to this file %>
+<!-- <div class="nav">
+	<ul>
+		<li><a href="#" class="nav">hola</a></li>
+		<li><a href="" class="nav">hola</a></li>
+	</ul>
+</div> -->
