--- a/app/views/layouts/_sandbox_navigation.html.erb
+++ b/app/views/layouts/_sandbox_navigation.html.erb
@@ -1,12 +1,6 @@
-<%# navigation styled for Bootstrap 3.0 %>
-<nav class="navbar navbar-inverse navbar-fixed-top">
-	<a class="company-logo" href="#">Vizard</a><span class="tagline">beta</span>
-        <%= render 'layouts/navigation_links' %>
-      <div class="container">
-			<div class="clearfix toolbarName">
-	              <span id="fileName"><%= truncate(@sandbox.name, length: 40, omission: "...") %></span>
-	              <span id="fileEdit"><%= link_to('<i class="fa fa-pencil"></i>'.html_safe, [:edit, @sandbox]) %></span>
-	              <span class="alert"></span>
-	        </div>
-	 </div>
-</nav>
+<% content_for :navbar do %>
+    <span id="fileName"><%= truncate(@sandbox.name, length: 40, omission: "...") %></span>
+    <span id="fileEdit"><%= link_to('<i class="fa fa-pencil"></i>'.html_safe, [:edit, @sandbox]) %></span>
+    <span class="alert"></span>
+<% end %>
+<%= render 'layouts/navigation' %>
