add a "/" to main logo

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
     <header>
       <nav class="navbar navbar-inverse navbar-fixed-top">
-      <a class="company-logo" href="#">Vizard</a><span class="tagline">beta</span>
+      <a class="company-logo" href="/">Vizard</a><span class="tagline">beta</span>
         <div class="container">
             <div class="clearfix toolbarName"></div>
         </div>
