restore title of a map
for display the name of a map on a browser label

--- a/app/views/sandboxes/show.html.erb
+++ b/app/views/sandboxes/show.html.erb
@@ -1,4 +1,7 @@
             <!-- <title><%= @sandbox.name %></title> -->
+<% content_for :title do %>
+<%= @sandbox.name %>
+<% end %>
    		<div class="full clearfix">
 				<div class="pull-left left">
 					 <div id="stencil-container"></div>
