--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -59,8 +59,8 @@ span.tagline{
 
 .step-title {
   font-weight: 600;
-  margin-bottom: 10px;
-  font-size: 14px;
+  margin-bottom: 5px;
+  font-size: 15px!important;
   margin-top: 10px;
 }
 
@@ -396,11 +396,17 @@ color: #F2F2F2;
 	bottom: 0;
 }
 
+.inspector .group {
+	overflow: hidden;
+	padding: 10px 10px 10px 20px;
+}
+
 #inspector-container {
   background: #fff;
   top: 50px;
   bottom: 0;
   height: 100%;
+  border-left: 1px solid #cecece;
 }
 
 .clearfix.toolbarName {
@@ -409,14 +415,14 @@ color: #F2F2F2;
 }
 
 .inspector input, .inspector textarea {
-  border: none;
-  border-radius: 0px;
+  border: 1px solid #cecece;
   font-family: 'Open Sans', sans-serif;
   background: #FFFFFF;
   font-size: 14px;
   font-weight: 300;
   padding: 10px 3%;
   width: 93%;
+  box-shadow: none;
 }
 
 .inspector input[type=text] {
@@ -438,6 +444,7 @@ color: #F2F2F2;
 
 .inspector select{
 	border:none;
+	color: #fff;
 }
 
 .inspector-trigger {
@@ -475,10 +482,11 @@ color: #F2F2F2;
 
 .inspector label {
   display: inline-block;
-  font-weight: 400;
-  color: #555555;
+  font-weight: bold;
+  color: #222;
   font-family: 'Open Sans', sans-serif;
   text-transform: none;
+  margin-right: 10px;
 }
 
 /*Labels*/
